--- a/gb/22/3/28/n13678637.md
+++ b/gb/22/3/28/n13678637.md
@@ -150,7 +150,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/12/n10556515.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/15/n11385414.md#1" target="_blank">20年前 澳洲西人为法轮功赴京上访（下）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/2/n10271780.md#1" target="_blank">中共淫乱的前生今世（9）四大基础</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/2/n10610921.md#1" target="_blank">8岁自闭儿奇迹“开心锁” 变身最快乐男孩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
